--- a/news/templates/post_list.html
+++ b/news/templates/post_list.html
@@ -12,10 +12,17 @@
 			<input type="submit" name="傳送">
 		</form>
 
-		{% for post in news_list %}
-		<h3>{{post.title}}</h3>
-		{% endfor %}
+		<div style="border: thin solid black;float:left;width:700px">
+			{% for post in news_list %}
+			<h3>新聞：{{post.title}} {{post.date}}</h3>
+			{% endfor %}
+		</div>
 
+		<div style="border: thin solid red;float:left">	
+		{% for post in ptt_list %}
+		<h4>PTT：{{post.title}} {{post.date}}</h4>
+		{% endfor %}
+		</div>
 
 	</body>
 
